--- a/index.html
+++ b/index.html
@@ -1258,8 +1258,8 @@ font-size: 0.9em;
     </div>
     <div class="quater-row">
       <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-      <p >Design</p>
-      <p>scale symbolizes fairness in education getting a chance to being one step closer to pursuing dreams at a less costly alternative</p>
+      <p >Balancing Opportunities: Weighing the Path to Success</p>
+      <p>Aid in the process of making informed decisions and pursuing one's desires at a less costly alternative to being one step closer to turning dreams into reality.</p>
     </div>
     <div class="quater-row">
       <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
