--- a/index.html
+++ b/index.html
@@ -1246,15 +1246,14 @@ font-size: 0.9em;
   <div class="row-column" >
     <div class="quater-row">
       <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
-      <p >Accomplish</p>
-      <p>Graduation cap symbolizing academic achievement and completion of a degree abroad.
-        college building to symbolize finding your dream college
+      <p >Guiding You to Your Perfect College: Where Dreams Take Shape</p>
+      <p>AfterSchool helps guide students to chase their dreams by aligning and supporting them toward their ideal educational institution, where their aspirations and potential can flourish.
       </p>
     </div>
     <div class="quater-row">
       <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
-      <p >Passion</p>
-      <p>apple symbolizes education and learning which is accomplished through resume and application aid</p>
+      <p >Charting Your Academic Journey: Navigating Toward Success</p>
+      <p>As students for students, navigating the educational journey, showcasing the guidance and support provided in leading them to a brighter academic future.</p>
     </div>
     <div class="quater-row">
       <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
@@ -1263,8 +1262,8 @@ font-size: 0.9em;
     </div>
     <div class="quater-row">
       <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
-      <p >Support</p>
-      <p>road as students creating this for students showcases leading to academic success</p>
+      <p >Nurturing Success: Cultivating Knowledge, Harvesting Futures</p>
+      <p>AfterSchool aids in fostering educational growth and helping students achieve success through services such as resume and application aid, ultimately leading to a fruitful and prosperous future. Through education and learning, we help develop personal development.</p>
     </div>
   </div>
 </div>
