--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>AfterSchool</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    @media only screen and (max-width: 600px) {
+    /* Styles for screens up to 600px wide */
+}
+
   
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
