--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body.show-chatbot .chatbot-toggler span:last-child {
   position: fixed;
   right: 35px;
   bottom: 90px;
-  width: 420px;
+  max-width: 420px;
   background: #fff;
   border-radius: 15px;
   overflow: hidden;
@@ -165,14 +165,14 @@ header h2 {
   gap: 5px;
   position: absolute;
   bottom: 0;
-  width: 100%;
+  max-width: 150 px;
   background: white;
   padding: 3px 20px;
   border-top: 1px solid #ddd;
 }
 .chat-input textarea {
   height: 55px;
-  width: 100%;
+  max-width: 150px;
   border: none;
   outline: none;
   resize: none;
@@ -204,7 +204,7 @@ header h2 {
     bottom: 0;
     height: 100%;
     border-radius: 0;
-    width: 100%;
+    max-width: 150px;
   }
   .chatbot .chatbox {
     height: 90%;
@@ -279,7 +279,7 @@ nav ul li a:hover {
 
 .slideshow-container {
     position: relative;
-    width: 100%;
+    max-width: 580px;
     height: 80vh; /* Adjust height as needed */
     overflow: hidden;
   
@@ -290,13 +290,13 @@ nav ul li a:hover {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    max-width: 580px;
     height: 100%;
    
 }
 
 .slides img {
-    width: 100%;
+    max-width: 580px;
     height: 100%;
     object-fit: cover;
 }
