--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <title>AfterSchool</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    @media only screen and (max-width: 600px) {
-    /* Styles for screens up to 600px wide */
-}
-
+    {
+    
   
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,10 +22,11 @@
       padding: 0;
       box-sizing: border-box;
       transition: background-color 0.5s, color 0.5s;
+      @media only screen and (max-width: 600px); 
+
     }
 
  
-
 .chatbot-toggler {
   position: fixed;
   bottom: 30px;
