--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>AfterSchool</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {
+    
     
   
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -289,13 +289,13 @@ nav ul li a:hover {
     position: absolute;
     top: 0;
     left: 0;
-    max-width: 580px;
+    max-width: 100%;
     height: 100%;
    
 }
 
 .slides img {
-    max-width: 580px;
+    max-width: 100%;
     height: 100%;
     object-fit: cover;
 }
