--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       padding: 0;
       box-sizing: border-box;
       transition: background-color 0.5s, color 0.5s;
-      @media only screen and (max-width: 600px); 
+      
 
     }
-
+ @media only screen and (max-width: 600px);
  
 .chatbot-toggler {
   position: fixed;
@@ -278,7 +278,7 @@ nav ul li a:hover {
 
 .slideshow-container {
     position: relative;
-    max-width: 580px;
+    width: 100%;
     height: 80vh; /* Adjust height as needed */
     overflow: hidden;
   
@@ -289,13 +289,13 @@ nav ul li a:hover {
     position: absolute;
     top: 0;
     left: 0;
-    max-width: 100%;
+    width: 100%;
     height: 100%;
    
 }
 
 .slides img {
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
